# Dara

./: .gitignore  Anchor.toml  README.md  TESTING-GUIDE.md  docs.txt  info.txt  package.json
app/: package-lock.json  package.json  presales-data.json
app/public/: pitch.html
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/analyze/: route.ts
app/src/app/api/chat/: route.ts
app/src/app/api/create-token/: route.ts
app/src/app/api/launch/prebuy/: route.ts
app/src/app/api/presales/: route.ts
app/src/app/api/swap/execute/: route.ts
app/src/app/api/swap/quote/: route.ts
app/src/app/create/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/launch/: page.tsx
app/src/app/presale/[id]/: page.tsx
app/src/app/swap/: page.tsx
app/src/app/wallets/: page.tsx
app/src/components/: ai-chat.tsx  navbar.tsx  wallet-button.tsx  wallet-provider.tsx
app/src/lib/: burner.ts  constants.ts  idl.json  jupiter.ts  program.ts  relayer.ts  stealth.ts
programs/anon-presale/src/: lib.rs
programs/dara/: Cargo.toml
programs/dara/src/: lib.rs
tests/: anon-presale.ts
