[package]
name = "anon-presale"
version = "0.1.0"
description = "Anonymous presale platform for Anoncoin tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anon_presale"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token"] }
